test/grad/good/30.cc
#include <iostream>
#include <string>

using std::cout;
using std::endl;
using std::string;

int main()
{
    double y = x();
    for (double x, y, z; x + y + z < 10; x++)
    {
        double a = x - y - z / 10.2352;
        for (x = false; x != true; x--)
        {
            int y = x == true;
            return y;
        }
        return x == 4.253;
    }
    int x = true;
    y = x;
    string z = y; // Not valid C++, but valid CPP :)
    return z == "34hehe";
}

bool x()
{
    return false;
}

int y()
{
    return 3;
}
