test/grad/bad/29.cc
#include <iostream>
#include <string>

using std::string;
using std::cout;
using std::endl;

int main()
{
    double y = x();
    for (double x,y,z; x + y + z < 10; x++)
    {
        double a = x - y - z / 10.2352;
        return x == 4.253;
    }
    int x = true;
    y = x;
    string z = y; // Not valid C++, but valid CPP :)
    return z++; // Not valid CPP or C++
}

bool x()
{
    return false;
}

int y()
{
    return 3;
}
